2008-06-02  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/igraph.h (igraph_get_shortest_paths_dijkstra) :
	added header
	
	* src/structural_properties.c (igraph_get_shortest_paths_dijkstra) :
	added
	
	* examples/simple/igraph_get_shortest_paths_dijkstra.{c,out} :
	added

	* interfaces/python/src/graphobject.c :
	added weight support for Graph.get_shortest_paths()
	
2008-05-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/igraph.h (igraph_shortest_paths_bellman_ford) :
	added missing header

	* interfaces/python/src/graphobject.c :
	modified Graph.shortest_paths to call the Bellman-Ford algorithm
	instead of Dijkstra

2008-05-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/fast_community.c (igraph_community_fastgreedy) :
	check that the graph is simple

2008-05-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-lgl-lexer.l
	* src/foreign-ncol-lexer.l : make these work with any EOL 
	encoding

2008-05-21  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/flow.c (igraph_mincut) : type of `value` should be
	igraph_real_t and not igraph_integer_t
	
	* interfaces/functions.def : corrected type of `value` in
	igraph_mincut

	* interfaces/R/src/rinterface.c.in : corrected type of
	`value` in igraph_mincut
	
2008-05-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/arpack.c (igraph_arpack_unpack_complex) : added

	* src/arpack.c (igraph_arpack_rnsolve) : bug fix, corrects
	occasional segfault, plus keep original 'nev' option, ARPACK
	overwrites this sometimes

	* src/arpack.c (igraph_arpack_rssolve) : default mode is 'LM' 
	and not 'LA' to be conform with igrpah_arpack_rnsolve
	* src/community.c (igraph_community_leading_eigenvector_naive)
	(igraph_community_leading_eigenvector)
	(igrpah_community_leading_eigenvector_step) : updated	

2008-05-12  Tamas Nepusz  <ntamas@rmki.kfki.hu> :
	* src/foreign.c (igraph_read_graph_{ncol,lgl,pajek}) :
	proper error handling

	* examples/simple/igraph_read_graph_lgl : added test case
