@@ -12,6 +12,24 @@ class MaxFlowTests(unittest.TestCase):
         self.failUnless(self.capacities == \
             self.g.es.get_attribute_values("capacity"))
 
+    def testEdgeConnectivity(self):
+        self.failUnless(self.g.edge_connectivity(0, 3) == 2)
+        self.failUnless(Graph.Barabasi(50).edge_connectivity() == 1)
+        self.failUnless(self.g.adhesion() == 2)
+        self.failUnless(Graph.Tree(10, 3).adhesion() == 1)
+        self.failUnless(Graph.Tree(10, 3, TREE_OUT).adhesion() == 0)
+        self.assertRaises(ValueError, self.g.edge_connectivity, 0)
+
+    def testVertexConnectivity(self):
+        self.failUnless(self.g.vertex_connectivity(0, 3) == 2)
+        self.failUnless(Graph.Barabasi(50).vertex_connectivity() == 1)
+        self.failUnless(self.g.cohesion() == 2)
+        self.failUnless(Graph.Tree(10, 3).cohesion() == 1)
+        self.failUnless(Graph.Tree(10, 3, TREE_OUT).cohesion() == 0)
+        self.assertRaises(ValueError, self.g.vertex_connectivity, 0)
+        self.assertRaises(InternalError, self.g.vertex_connectivity, 0, 1)
+        self.failUnless(self.g.vertex_connectivity(0, 1, neighbors="infinity") > 1000)
+
     def testMaxFlowValue(self):
         self.failUnless(self.g.maxflow_value(0, 3) == 2)
         self.failUnless(self.g.maxflow_value(0, 3, self.capacities) == 4)
